--- a/views/login.ejs
+++ b/views/login.ejs
@@ -24,6 +24,7 @@
         <label>Password</label>
         <input type="text" name="password" required>
         <button type="submit">Login</button>
+        <p>Don't have an account? <a href="/signup">Sign Up</a></p>
     </form>
 </body>
 </html>
