--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -23,6 +23,7 @@
         <label>Password</label>
         <input type="text" name="password" required>
         <button type="submit">Sign Up</button>
+        <p>Already have an account? <a href="/login">Login</a></p>
     </form>
 </body>
 </html>
