--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,30 +1,36 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <style>
-        body {
-          background-color: #f5f5f5;
-          font-family: "Open Sans", sans-serif;
-          font-size: 16px;
-          line-height: 1.5;
-        }
-    </style>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-</head>
-<body>
-    <h1>Login User</h1>
-    <% if (locals.error) { %>
-        <p><%= `⚠️ ${locals.error} !` %></p>
-    <% } %>
-    <form action="/user/login" method="POST">
-        <label>Email</label>
-        <input type="text" name="email" required>
-        <label>Password</label>
-        <input type="text" name="password" required>
-        <button type="submit">Login</button>
-        <p>Don't have an account? <a href="/signup">Sign Up</a></p>
-    </form>
-</body>
-</html>
+<%- include('partials/header') %>
+
+<div class="container mt-5 justify-content-center align-items-center w-25">
+  <h1>Login User</h1>
+  <% if (locals.error) { %>
+  <div class="alert alert-danger" role="alert">
+    <i class="bi bi-exclamation-triangle"></i> <%= locals.error %>!
+  </div>
+  <% } %>
+  <form action="/user/login" method="POST" class="mt-4">
+    <div class="mb-3">
+      <label for="email" class="form-label">Email</label>
+      <input
+        type="text"
+        name="email"
+        id="email"
+        class="form-control"
+        required
+      />
+    </div>
+    <div class="mb-3">
+      <label for="password" class="form-label">Password</label>
+      <input
+        type="password"
+        name="password"
+        id="password"
+        class="form-control"
+        required
+      />
+    </div>
+    <button type="submit" class="btn btn-primary">Login</button>
+    <p class="mt-3">Don't have an account? <a href="/signup">Sign Up</a></p>
+  </form>
+</div>
+
+<%- include('partials/footer') %>
