--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,29 +1,35 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <style>
-        body {
-          background-color: #f5f5f5;
-          font-family: "Open Sans", sans-serif;
-          font-size: 16px;
-          line-height: 1.5;
-        }
-    </style>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign Up</title>
-</head>
-<body>
-    <h1>Sign Up</h1>
-    <form action="/user" method="POST">
-        <label>Full Name</label>
-        <input type="text" name="name" required>
-        <label>Email</label>
-        <input type="text" name="email" required>
-        <label>Password</label>
-        <input type="text" name="password" required>
-        <button type="submit">Sign Up</button>
-        <p>Already have an account? <a href="/login">Login</a></p>
-    </form>
-</body>
-</html>
+<%- include('partials/header') %>
+
+<div class="container mt-5 justify-content-center align-items-center w-25">
+  <h1>Sign Up</h1>
+  <form action="/user" method="POST" class="mt-4">
+    <div class="mb-3">
+      <label for="name" class="form-label">Full Name</label>
+      <input type="text" name="name" id="name" class="form-control" required />
+    </div>
+    <div class="mb-3">
+      <label for="email" class="form-label">Email</label>
+      <input
+        type="email"
+        name="email"
+        id="email"
+        class="form-control"
+        required
+      />
+    </div>
+    <div class="mb-3">
+      <label for="password" class="form-label">Password</label>
+      <input
+        type="password"
+        name="password"
+        id="password"
+        class="form-control"
+        required
+      />
+    </div>
+    <button type="submit" class="btn btn-primary">Sign Up</button>
+  </form>
+  <p class="mt-3">Already have an account? <a href="/login">Login</a></p>
+</div>
+
+<%- include('partials/footer') %>
