--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -2,6 +2,11 @@
 
 <div class="container mt-5 justify-content-center align-items-center w-25">
   <h1>Sign Up</h1>
+  <% if (locals.error) { %>
+  <div class="alert alert-danger" role="alert">
+    <i class="bi bi-exclamation-triangle"></i> <%= locals.error %>!
+  </div>
+  <% } %>
   <form action="/user" method="POST" class="mt-4">
     <div class="mb-3">
       <label for="name" class="form-label">Full Name</label>
